# documind

./: .env.example  .gitignore  ARCHITECTURE_PROMPT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: __init__.py  document.py  query.py
backend/app/routers/: __init__.py  analytics.py  documents.py  query.py
backend/app/services/: __init__.py  embeddings.py  evaluator.py  graph_store.py  ingestion.py  rag_pipeline.py  vector_store.py
backend/app/utils/: __init__.py  chunker.py  reranker.py
backend/tests/: test_evaluator.py  test_ingestion.py  test_rag_pipeline.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/analytics/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/components/analytics/: MetricsGrid.tsx  QualityChart.tsx  UsageStats.tsx
frontend/components/chat/: ChatInterface.tsx  CitationCard.tsx  MessageBubble.tsx  QualityBadge.tsx  StreamingMessage.tsx
frontend/components/documents/: DocumentCard.tsx  DocumentList.tsx  UploadZone.tsx
frontend/components/layout/: Header.tsx  (+1 more)
frontend/hooks/: useAnalytics.ts  useChat.ts  useDocuments.ts
frontend/lib/: api.ts  streaming.ts
frontend/types/: index.ts
src/documind/: api.py  chunker.py  config.py  main.py  models.py  rag.py  vectorstore.py
tests/: test_api.py  test_chunker.py
