[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "documind"
version = "0.1.0"
description = "Production RAG engine — ingest documents, query with Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.3.0",
    "pypdf>=5.1.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
